--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/CalyCherkaoui/restaurant_page/issues"
   },
-  "homepage": "https://github.com/CalyCherkaoui/restaurant_page#readme"
+  "homepage": "https://github.com/CalyCherkaoui/restaurant_page#readme",
+  "devDependencies": {
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0"
+  }
 }
