--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "restaurant page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CalyCherkaoui/restaurant_page.git"
