--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
-    },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CalyCherkaoui/restaurant_page.git"
@@ -22,6 +22,14 @@
   },
   "homepage": "https://github.com/CalyCherkaoui/restaurant_page#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.17.2",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0"
   }
